hot fix to checkin state header being squished the screenshot credentials modal bug fix. it only shows once per session per user know. very good.

--- a/project/src/core/lobby/lobby.css
+++ b/project/src/core/lobby/lobby.css
@@ -719,7 +719,7 @@
 .player-count-container {
     display: flex;
     justify-content: center;
-    margin: -40px auto 20px;
+    margin: 0.5rem auto 2rem;
     z-index: 10;
 }
 
@@ -1172,7 +1172,7 @@
     align-items: center;
     width: 100%;
     max-width: 600px;
-    margin: -2.5rem auto 1.5rem;
+    margin: -0.5rem auto 1rem;
     padding: 0 1rem;
     box-sizing: border-box;
     justify-content: center;
